--- a/EnterpriseWarehouse/EnterpriseWarehouseClient/Views/MainWindow.axaml
+++ b/EnterpriseWarehouse/EnterpriseWarehouseClient/Views/MainWindow.axaml
@@ -1,10 +1,10 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:vm="using:EnterpriseWarehouseClient.ViewModels"
+        xmlns:vm="using:EnterpriseWarehouse.Client.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="EnterpriseWarehouseClient.Views.MainWindow"
+        x:Class="EnterpriseWarehouse.Client.Views.MainWindow"
         Icon="/Assets/enterprise-icon.png"
         Title="Предприятие">
 
