--- a/EnterpriseWarehouse/EnterpriseWarehouseClient/Views/ProductWindow.axaml
+++ b/EnterpriseWarehouse/EnterpriseWarehouseClient/Views/ProductWindow.axaml
@@ -3,8 +3,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="EnterpriseWarehouseClient.Views.ProductWindow"
-		xmlns:vm="using:EnterpriseWarehouseClient.ViewModels"
+        x:Class="EnterpriseWarehouse.Client.Views.ProductWindow"
+		xmlns:vm="using:EnterpriseWarehouse.Client.ViewModels"
         Title="Редактирование продукта"
 		MaxHeight="500"
 		MaxWidth="500"
