--- a/LibrarySchool.Client/App.axaml
+++ b/LibrarySchool.Client/App.axaml
@@ -1,7 +1,7 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="using:LibrarySchool.Client"
-             x:Class="LibrarySchool.Client.App">
+             xmlns:local="using:LibrarySchool.Desktop"
+             x:Class="LibrarySchool.Desktop.App">
     <Application.DataTemplates>
         <local:ViewLocator/>
     </Application.DataTemplates>
