--- a/LibrarySchool.Client/Views/MainWindow.axaml
+++ b/LibrarySchool.Client/Views/MainWindow.axaml
@@ -1,16 +1,16 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:vm="using:LibrarySchool.Client.ViewModels"
+        xmlns:vm="using:LibrarySchool.Desktop.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="850" d:DesignHeight="450"
-        x:Class="LibrarySchool.Client.Views.MainWindow"
+        x:Class="LibrarySchool.Desktop.Views.MainWindow"
 		Width="850"
 		WindowStartupLocation="CenterScreen"
 		Height="550"
         Icon="/Assets/avalonia-logo.ico"
 		x:Name="MainWindowView"
-        Title="LibrarySchool.Client">
+        Title="LibrarySchool.Desktop">
 	<Design.DataContext>
 		<vm:MainWindowViewModel/>
 	</Design.DataContext>
