--- a/LibrarySchool.Client/Views/WindowQueryView.axaml
+++ b/LibrarySchool.Client/Views/WindowQueryView.axaml
@@ -3,12 +3,12 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="900" d:DesignHeight="600"
-		xmlns:vm="using:LibrarySchool.Client.ViewModels"
+		xmlns:vm="using:LibrarySchool.Desktop.ViewModels"
 		Width="900"
 		Height="500"
 		CanResize="False"
 		WindowStartupLocation="CenterScreen" 
-        x:Class="LibrarySchool.Client.Views.WindowQueryView"
+        x:Class="LibrarySchool.Desktop.Views.WindowQueryView"
         Title="WindowQueryView">
 	<Design.DataContext>
 		<vm:QueryViewModel/>
